--- a/package.json
+++ b/package.json
@@ -5,9 +5,9 @@
   "main": "server.js",
   "scripts": {
     "start": "node server",
-    "server": "nodemon server" 
+    "server": "nodemon server"
   },
-  "type": "module",
+  "type": "commonjs",
   "author": "Jatin",
   "license": "ISC",
   "dependencies": {
@@ -18,6 +18,7 @@
     "express-validator": "^7.0.1",
     "gravatar": "^1.8.2",
     "jsonwebtoken": "^9.0.1",
+    "mongodb": "^5.7.0",
     "mongoose": "^7.4.2"
   },
   "devDependencies": {
