L-20 created user profile ,get to all profiles, get to specific profile and DELETE user, user's  profile , todo -> Delete user posts left

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "devconnector",
+  "name": "Developer Connector",
   "version": "1.0.0",
   "description": "Developers Connector web app",
   "main": "server.js",
