--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "gravatar": "^1.8.2",
     "jsonwebtoken": "^9.0.1",
     "mongodb": "^5.7.0",
-    "mongoose": "^7.4.2"
+    "mongoose": "^7.4.2",
+    "normalize-url": "^8.0.0"
   },
   "devDependencies": {
     "concurrently": "^8.2.0"
