--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "normalize-url": "^8.0.0"
   },
   "devDependencies": {
+    "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
     "concurrently": "^8.2.0"
   }
 }
